Update dependencies versions, details here and there